Fixed some alignment and lined up numbers

--- a/css/header.css
+++ b/css/header.css
@@ -145,7 +145,7 @@ header .socials li a:hover svg {
 @media only screen and (min-width: 320px) and (max-width: 479px) {
   header {
     padding-bottom: 0;
-    margin-bottom: 1rem;;
+    margin-bottom: 2rem;
   }
   header .content {
     flex-direction: column;
